--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,9 @@
   position: absolute;
   top: 250px;
 }
+.ONntwk__inputimg {
+  z-index: 999;
+}
 .ONntwk__inputwrapperhome {
   display: flex;
   justify-content: center;
@@ -401,4 +404,12 @@ button.rec-dot:hover, button.rec-dot:active, button.rec-dot:focus  {
 
 .ONntwk__sidecardeswrap {
   display: flex;
+}
+.temporal {
+  height: 30px;
+  cursor: pointer;
+  position: absolute;
+}
+.ONntwk__modal {
+  z-index: 999!important;
 }
